5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1785_3135.log
== TEST (2019-05-30 10:06:24) 
-- CODE:
from numpy import *


v = array(eval(input("Digite o vetor: ")))

n = arrange(v)

m = ((v[n] ** (1 / 2) + v[n] ** (1 / 2) + v[n] ** (1/2) + v(n) ** 1 / 2) / n) ** 2

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:50) 
-- CODE:
from numpy import *


v = array(eval(input("Digite o vetor: ")))

n = arrange(v)

m = ((v[n] ** (1 / 2) + v[n] ** (1 / 2) + v[n] ** (1/2) + v(n) ** 1 / 2) / n) ** 2

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:07:14) 
-- CODE:
from numpy import *


v = array(eval(input("Digite o vetor: ")))

m = ((v[n] ** (1 / 2) + v[n] ** (1 / 2) + v[n] ** (1/2) + v(n) ** 1 / 2) / n) ** 2

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:13:14) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: ")))

n = arange(v)

m = ((v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[n] ** 1 / 2) / n) ** 2

print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:19:23) 
-- CODE:
from numpy import *

v =array(eval(input("Digite o vetor: "))

m = ((v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) / v) ** 2

print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    m = ((v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) / v) ** 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:23:16) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

m = ((v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) / v) ** 2

print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    m = ((v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) / v) ** 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:23:28) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

m = ((v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2

print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    m = ((v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:23:37) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

x = ((v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2

print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    x = ((v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:24:03) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

x = (v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2

print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    x = (v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:24:08) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

y = (v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2

print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    y = (v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:25:47) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

i = 0

while(i < size(v)):
	if(v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2
	i = i + 1
print(round(i, 2))
-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:26:17) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

i = 0

while(i < size(v)):
	if(v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2):
	i = i + 1
print(round(i, 2))
-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:28:30) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

m = (v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2
			 
print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    m = (v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:31:25) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

m = (v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2
			 
print(round(m, 2))
-- EXECUTION TIME:
0.137218
-- ERROR:
  File "/home/codebench/codes/1785/3135/main.py", line 5
    m = (v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:31:40) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

m = (v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2
			 
print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    m = (v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) ** 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:35:47) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

#m = ((v[0] ** (1 / 2) + v[1] ** (1 / 2) + v[2] ** (1/2) + v[-1] ** 1 / 2) / n) ** 2
			 
#print(round(m, 2))
-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:41:20) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

i = 0

while(i < size(v)):
	m = ((v[] ** 1 / 2) + (v[] ** 1 / 2) + (v[] ** 1 / 2) / ) ** 2
		i = i + 1
	print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:45:54) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

i = 0

while(i < size(v)):
	m = ((v[i] ** 1 / 2) + (v[i] ** 1 / 2) + (v[i] ** 1 / 2) / i) ** 2
		i = i + 1
	print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:48:43) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

i = 0
m = 0

while(i < size(v)):
	m = ((v[i] ** 1 / 2) + (v[i] ** 1 / 2) + (v[i] ** 1 / 2) / i) ** 2
		i = i + 1
print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:48:54) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

i = 0
m = 0

while(i < size(v)):
	m = m + ((v[i] ** 1 / 2) + (v[i] ** 1 / 2) + (v[i] ** 1 / 2) / i) ** 2
		i = i + 1
print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:51:55) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

i = 0

while(i < size(v)):
	m = ((v[i] ** 1 / 2) + (v[i] ** 1 / 2) + (v[i] ** 1 / 2) / i) ** 2
		i = i + 1
print(round(i, 2))
-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:53:05) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

i = 0

while(i < size(v)):
	m = (v[i]) ** 2
		i = i + 1
print(round(i, 2))
-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:53:21) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

while(i < size(v)):
	m = (v[i]) ** 2
print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    while(i < size(v)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:53:34) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

while(size(v)):
	m = (v[i]) ** 2
print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    while(size(v)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:54:45) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

i = 0

while(i < size(v)):
	m = (v[i]) ** 2
print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:54:56) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

i = 0

while(i < size(v)):
			 i = i + 1
	m = (v[i]) ** 2
print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:55:00) 
-- CODE:
from numpy import *

v = array(eval(input("Digite o vetor: "))

i = 0

while(i < size(v)):
	i = i + 1
	m = (v[i]) ** 2
print(round(m, 2))
-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
